modules/error/views/ifaces/Admin/Test/PhpExceptionLogger.twig
{% extends layout %}

{% block content %}

  <h1>Logger successfully processed</h1>

{% endblock %}
